<resources>
    <string name="app_name">Date for Sure</string>
    <string name="welcome">WELCOME</string>
    <string name="log_in">LOG IN</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="register_here"><u>Register Here</u></string>
    <string name="reset_password"><u>Reset Password?</u></string>
    <string name="sign_up_using">Or Sign Up using</string>
    <string name="register">REGISTER</string>
    <string name="gender">Gender</string>
    <string name="email">Email</string>
    <string name="name">Full Name</string>
    <string name="password2">Password</string>
    <string name="conform_password">Conform Password</string>
    <string name="checkBox_conditions">I agree with the terms and conditions</string>
    <string name="submit">SUBMIT</string>
    <string name="facebook">facebook</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu">menu</string>
    <string name="chats">Messages</string>
    <string name="explorer">Explore</string>
    <string name="groups">Groups</string>
    <string name="profile">Profile</string>
    <string name="verification">VERIFICATION</string>
    <string name="resend"><u>Didn’t receive the code? Resend 45s</u></string>
    <string name="required">Required to be filled</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="near_by_people">Near By People</string>
    <string name="payment_plan">Payment Plan</string>
    <string name="social_media">Other social media</string>
    <string name="settings">Settings</string>
    <string name="todo">TODO</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
</resources>