<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/ic_background_sign">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/robotoregular"
            android:layout_gravity="center"
            android:letterSpacing="0.15"
            android:layout_marginTop="20dp"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck"
            tools:layout_editor_absoluteX="194dp"
            tools:layout_editor_absoluteY="167dp" />

        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:layout_gravity="center"
            android:textAlignment="center"
            tools:ignore="TextContrastCheck"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:fontFamily="@font/robotoregular"
            android:letterSpacing="0.15"
            android:paddingTop="5dp"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="168dp"
            android:autofillHints="username"
            android:background="@drawable/input_rectable"
            android:drawableStart="@drawable/ic_username"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="2dp"
            android:textColorHint="@color/faint_color"
            tools:ignore="LabelFor,TextContrastCheck" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="26dp"
            android:background="@drawable/input_rectable"
            android:drawableStart="@drawable/ic_password_lock"
            android:ems="10"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="2dp"
            android:textColorHint="@color/faint_color"
            tools:ignore="TextContrastCheck" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:text="@string/register_here"
                android:textColor="@color/purple_200"
                tools:ignore="TextContrastCheck"
                android:textSize="11sp"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="140dp"
                android:layout_marginTop="22dp"
                android:text="@string/reset_password"
                android:textColor="@color/teal_700"
                android:textSize="11sp"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>


        <Button
            android:id="@+id/button"
            android:layout_width="149dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="43dp"
            android:background="@drawable/btn_rectangle"
            android:text="@string/login" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:text="@string/sign_up_using"
            android:textColor="@color/faint_color"
            android:textSize="11sp"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
