<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ui.SignUp"
    android:background="@drawable/ic_background_login">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.198">

            <TextView
                android:id="@+id/welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/robotoregular"
                android:letterSpacing="0.15"
                android:text="@string/register"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="26sp"
                tools:ignore="TextContrastCheck"
                tools:layout_editor_absoluteX="194dp"
                tools:layout_editor_absoluteY="167dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:boxStrokeWidth="0dp"
                app:errorEnabled="true"
                android:layout_marginTop="180dp"
                app:hintAnimationEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:autofillHints="username"
                android:background="@drawable/input_rectable"
                android:drawableStart="@drawable/ic_username2"
                android:drawablePadding="20dp"
                android:ems="10"
                android:hint="@string/name"
                app:boxStrokeWidthFocused="0dp"
                android:inputType="textPersonName"
                android:padding="12dp"
                android:paddingStart="10dp"
                android:paddingEnd="2dp"
                android:textColorHint="@color/faint_color"
                tools:ignore="LabelFor,TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/useremailContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="0dp"
        android:layout_marginTop="6dp"
        app:errorEnabled="true"
        android:orientation="vertical"
        app:hintAnimationEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userEmail"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/input_rectable"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="20dp"
                android:ems="10"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:paddingStart="10dp"
                android:paddingEnd="2dp"
                android:textColorHint="@color/faint_color"
                tools:ignore="LabelFor,TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usergenderContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        app:boxStrokeWidth="0dp"
        app:errorEnabled="true"
        android:orientation="vertical"
        app:hintAnimationEnabled="false">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usergender"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/input_rectable"
                android:drawableStart="@drawable/ic_gender"
                android:drawablePadding="20dp"
                android:hint="@string/gender"
                android:inputType="none"
                android:padding="12dp"
                android:textColorHint="@color/faint_color"
                tools:ignore="Autofill" />


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userpasswordContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        app:boxStrokeWidth="0dp"
        app:errorEnabled="true"
        android:orientation="vertical"
        app:hintAnimationEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userpassword"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/input_rectable"
                android:drawableStart="@drawable/ic_password_key"
                android:drawablePadding="20dp"
                android:autofillHints="password"
                android:hint="@string/password2"
                android:inputType="textPassword"
                android:padding="12dp" />

    </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkBox_conditions"
                android:textColor="@color/teal_700"
                android:buttonTint="@color/teal_700"
                />

            <Button
                android:id="@+id/button_signup"
                android:layout_width="149dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:onClick="goToVerification"
                android:background="@drawable/btn_rectangle"
                android:textSize="16sp"
                android:text="@string/submit"
                tools:ignore="UsingOnClickInXml" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:text="@string/log_in"
                android:textColor="@color/teal_700"
                android:textSize="12sp"
                />


        </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
