<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/ic_background_login"
    android:layout_height="match_parent"
    tools:viewBindingIgnore="true"
    tools:context="ui.VerificationActivity">

  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:paddingLeft="20dp"
      android:paddingRight="20dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.198">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/robotoregular"
        android:letterSpacing="0.15"
        android:text="@string/verification"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="26sp"
        tools:ignore="TextContrastCheck"
        tools:layout_editor_absoluteX="194dp"
        tools:layout_editor_absoluteY="167dp" />


    <TextView
        android:id="@+id/verification_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="128dp"
        android:fontFamily="@font/robotoregular"
        android:letterSpacing="0.1"
        android:text="verification message"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        tools:ignore="TextContrastCheck"
        tools:layout_editor_absoluteX="194dp"
        tools:layout_editor_absoluteY="167dp" />


<LinearLayout
    android:id="@+id/verification_code"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="39dp">

  <EditText
      android:id="@+id/Verify_number1"
      android:layout_width="40dp"
      android:layout_height="40dp"
      android:textAlignment="center"
      android:background="@drawable/verfication_box"
      android:inputType="number"
      android:maxLength="1"
      tools:ignore="Autofill,LabelFor,TouchTargetSizeCheck,SpeakableTextPresentCheck" />

  <EditText
      android:id="@+id/Verify_number2"
      android:layout_width="40dp"
      android:layout_height="40dp"
      android:layout_marginStart="10dp"
      android:textAlignment="center"
      android:background="@drawable/verfication_box"
      android:inputType="number"
      android:maxLength="1"
      tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

  <EditText
      android:id="@+id/Verify_number3"
      android:layout_width="40dp"
      android:layout_height="40dp"
      android:layout_marginStart="10dp"
      android:textAlignment="center"
      android:background="@drawable/verfication_box"
      android:inputType="number"
      android:maxLength="1"
      tools:ignore="Autofill,LabelFor,TouchTargetSizeCheck,SpeakableTextPresentCheck" />

  <EditText
      android:id="@+id/Verify_number4"
      android:layout_width="40dp"
      android:layout_height="40dp"
      android:layout_marginStart="10dp"
      android:textAlignment="center"
      android:background="@drawable/verfication_box"
      android:importantForAutofill="no"
      android:inputType="number"
      android:maxLength="1"
      tools:ignore="LabelFor,TouchTargetSizeCheck,SpeakableTextPresentCheck" />

  <EditText
      android:id="@+id/Verify_number5"
      android:layout_width="40dp"
      android:layout_height="40dp"
      android:layout_marginStart="10dp"
      android:textAlignment="center"
      android:background="@drawable/verfication_box"
      android:importantForAutofill="no"
      android:inputType="number"
      android:maxLength="1"
      tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

  <EditText
      android:id="@+id/Verify_number6"
      android:layout_width="40dp"
      android:layout_height="40dp"
      android:layout_marginStart="10dp"
      android:textAlignment="center"
      android:background="@drawable/verfication_box"
      android:importantForAutofill="no"
      android:inputType="number"
      android:maxLength="1"
      tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

</LinearLayout>


    <Button
        android:id="@+id/button"
        android:layout_width="149dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="148dp"
        android:background="@drawable/btn_rectangle"
        android:textSize="16sp"
        android:text="@string/submit" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:text="@string/resend"
        android:textColor="@color/teal_700"
        android:textSize="12sp"
        tools:ignore="TextContrastCheck" />


  </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>

